Reorder navigation elements to improve focus navigation
The previous ordering resulted in illogical focus navigation. This
change ensures that the navigation elements still render visually in the
same order as before, but now the stepping through the elements via
keyboard or screen reader focus matches the visual ordering.

--- a/lib/navigation-bar/style.scss
+++ b/lib/navigation-bar/style.scss
@@ -20,7 +20,7 @@
 .navigation-bar__folders {
   display: flex;
   flex: none;
-  flex-direction: column-reverse;
+  flex-direction: column;
   border-bottom: 1px solid;
 }
 
