--- a/lib/tag-list/style.scss
+++ b/lib/tag-list/style.scss
@@ -2,7 +2,6 @@
   border-bottom: 1px solid;
   display: flex;
   font-size: 16px;
-  margin-left: 13px;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
@@ -74,7 +73,7 @@
   display: block;
   width: 50px;
   line-height: 2em;
-  padding: 6px 0 5px 0;
+  padding: 6px 0 5px 13px;
   border: none;
   text-overflow: ellipsis;
   font-size: 100%;
