--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -23,6 +23,7 @@
 @import 'dialogs/settings/style';
 @import 'dialogs/share/style';
 @import 'dialogs/button-group/style';
+@import 'error-boundary/style';
 @import 'email-verification/style';
 @import 'icon-button/style';
 @import 'icons/style';
